k8s/deployment.yaml
  apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-app
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dotnet-app
  template:
    metadata:
      labels:
        app: dotnet-app
    spec:
      containers:
        - name: dotnet-app
          image: <ECR_REPO_URI>:latest
          ports:
            - containerPort: 80
